# aoc2025

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
days/day01/: Cargo.toml
days/day01/src/: main.rs
days/day02/: Cargo.toml
days/day02/src/: main.rs
days/day03/: Cargo.toml
days/day03/src/: main.rs
days/day04/: Cargo.toml
days/day04/src/: main.rs
days/day05/: Cargo.toml
days/day05/src/: main.rs
days/day06/: Cargo.toml
days/day06/src/: main.rs
days/day07/: Cargo.toml
days/day07/src/: main.rs
days/day08/: Cargo.toml
days/day08/src/: main.rs
days/day09/: Cargo.toml
days/day09/src/: main.rs
days/day10/: Cargo.toml
days/day10/src/: main.rs
days/day11/: Cargo.toml
days/day11/src/: main.rs
days/day12/: Cargo.toml
days/day12/src/: main.rs
helpers/: Cargo.toml
helpers/src/: better_iter.rs  consume.rs  counter.rs  direction.rs  display_ext.rs  lib.rs  output.rs  rand_ext.rs  unwrap_display.rs
solver-interface/: Cargo.toml
solver-interface/src/: child.rs  lib.rs  parent.rs
src/: error.rs  lib.rs  main.rs  runner.rs
