[package]
edition = "2024"
name = "aoc2025"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.21", features = ["derive", "cargo"] }
clap_complete = "4.5.38"
helpers.workspace = true
html-escape = "0.2.13"
notify = "8.2.0"
num-integer.workspace = true
regex.workspace = true
solver-interface.workspace = true
thiserror.workspace = true
ureq = "3.1.4"

[workspace]
members = ["solver-interface", "helpers", "days/*"]

[workspace.dependencies]
atoi = "2.0.0"
arrayvec = "0.7.6"
binary-heap-plus = "0.5.0"
bincode = "2.0.0-rc.3"
bstr = "1.11.0"
bytemuck = "1.20.0"
helpers = { path = "helpers" }
itertools = "0.14.0"
num-integer = "0.1.46"
petgraph = "0.8.3"
primal = "0.3.3"
rand = { version = "0.9.2", default-features = false, features = ["std"] }
rand_xorshift = "0.4.0"
rayon = "1.10.0"
regex = "1.11.1"
rustc-hash = "2.0.0"
solver-interface = { path = "solver-interface" }
thiserror = "2.0.3"
z3 = { version = "0.19.6", features = ["bundled"] }

[lints.clippy]
large_stack_arrays = "warn"
